--- a/components/accordion/package.json
+++ b/components/accordion/package.json
@@ -33,6 +33,7 @@
 		"tslib": "^2.3.0"
 	},
 	"devDependencies": {
+		"@vonage/vvd-design-tokens": "2.13.0",
 		"@vonage/vvd-umbrella": "2.13.0",
 		"typescript": "^4.3.2"
 	}
