--- a/components/accordion/package.json
+++ b/components/accordion/package.json
@@ -27,8 +27,10 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@vonage/vvd-core": "2.13.0",
+		"@material/mwc-ripple": "^0.21.0",
 		"@vonage/vwc-expansion-panel": "2.13.0",
+		"@vonage/vvd-core": "2.13.0",
+		"@vonage/vwc-icon": "2.13.0",
 		"lit-element": "^2.4.0",
 		"tslib": "^2.3.0"
 	},
