--- a/components/expansion-panel/package.json
+++ b/components/expansion-panel/package.json
@@ -5,10 +5,9 @@
 	"author": "yinonov <yinon@hotmail.com>",
 	"homepage": "https://github.com/Vonage/vivid/tree/master/components/expansion-panel#readme",
 	"license": "ISC",
-	"main": "vwc-expansion-panel.js",
-	"module": "vwc-expansion-panel.js",
+	"main": "vwc-expansion-panel-core.js",
+	"module": "vwc-expansion-panel-core.js",
 	"files": [
-		"src",
 		"*.js",
 		"*.ts",
 		"*.map"
@@ -21,24 +20,19 @@
 	"scripts": {
 		"test": "echo \"Error: run tests from root\" && exit 1",
 		"build:typescript": "tsc -b",
-		"build:styles": "umbrella-style-modules",
-		"build": "yarn run build:styles && yarn run build:typescript"
+		"build": "yarn run build:typescript"
 	},
 	"bugs": {
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
 		"@material/mwc-base": "^0.21.0",
-		"@material/mwc-ripple": "^0.21.0",
-		"@vonage/vvd-core": "2.13.0",
-		"@vonage/vwc-icon": "2.13.0",
 		"lit-element": "^2.4.0",
 		"tslib": "^2.3.0"
 	},
 	"devDependencies": {
 		"@vonage/vvd-design-tokens": "2.13.0",
 		"@vonage/vvd-typography": "2.13.0",
-		"@vonage/vvd-umbrella": "2.13.0",
 		"typescript": "^4.3.2"
 	}
 }
