chore(ci): split visual tests per component (#935)
* Extract files management to files utils

* Refactor a bit

* Complete the refactor

* Update yarn lock

* Now creates a test page per component

* Create a snapshot per component

* Add all the artifacts

* Take full page snapshots

* Add ability to set snapshot from the full page

* Fix webpack build race condition

* Small fixes

- Removed logs
- Audio now snapshots its wrapper only
- button-toggle-group now imports the button

* Update git ignore

* Fix RC of the test pages build

Co-authored-by: tveinfeld <67224311+tveinfeld@users.noreply.github.com>

--- a/.github/workflows/pull-request-master.yml
+++ b/.github/workflows/pull-request-master.yml
@@ -111,7 +111,7 @@ jobs:
         if: ${{ always() }}
         with:
           name: snapshot
-          path: ./ui-tests/*.png
+          path: ./ui-tests/snapshots/*.png
 
   test_static:
     needs: build
