chore(workspace): switched to "Vonage/beame"

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,9 +3,10 @@ name: Release
 concurrency: ${{ github.workflow }}
 
 on:
-  push:
-    tags:
-      - v*
+  push
+#  push:
+#    tags:
+#      - v*
 
 jobs:
   build:
@@ -24,11 +25,7 @@ jobs:
           yarn_registry: "https://vonagecc.jfrog.io/vonagecc/api/npm/npm/"
         run: yarn install
       - run: yarn compile
-      - run: tar -zcf /tmp/vivid-env.tar.gz .
-      - uses: actions/upload-artifact@v2
-        with:
-          name: workspace
-          path: /tmp/vivid-env.tar.gz
+      - uses: Vonage/beame@v1
 
   publish:
     needs: build
@@ -49,11 +46,7 @@ jobs:
             host: registry.npmjs.org
     steps:
       - uses: actions/setup-node@v2
-      - uses: actions/download-artifact@v2
-        with:
-          name: workspace
-          path: /tmp
-      - run: tar -zxf /tmp/vivid-env.tar.gz
+      - uses: Vonage/beame@v1
 
       - name: Creating ".npmrc"
         run: printf "always-auth=true\nregistry=https://${{ matrix.host }}/\n//${{ matrix.host }}/:_authToken=${{ secrets[matrix.token_secret] }}" > .npmrc
