added missing dependency declaration for "@material/mwc-base"

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
-      - run: yarn install
+      #- run: yarn install
         env:
           PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
           yarn_always_auth: true
@@ -17,4 +17,4 @@ jobs:
           yarn_registry: "https://vonagecc.jfrog.io/vonagecc/api/npm/npm/"
       - uses: Vonage/beame@v0.1
 
-###
+####
