--- a/components/text/package.json
+++ b/components/text/package.json
@@ -28,6 +28,7 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
+		"@vonage/vvd-core": "2.13.0",
 		"lit-element": "^2.4.0",
 		"tslib": "^2.3.0"
 	},
