--- a/components/audio/package.json
+++ b/components/audio/package.json
@@ -25,11 +25,13 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@vonage/vvd-core": "2.13.0",
-		"@vonage/vwc-icon": "2.13.0",
-		"@vonage/vwc-media-controller": "2.13.0",
 		"lit-element": "^2.4.0",
 		"lit-html": "^1.1.1",
+		"@material/mwc-base": "^0.21.0",
+		"@vonage/vvd-core": "2.13.0",
+		"@vonage/vwc-media-controller": "2.13.0",
+		"@vonage/vvd-foundation": "2.13.0",
+		"@vonage/vwc-icon": "2.13.0",
 		"ramda": "^0.27.1"
 	},
 	"devDependencies": {
