--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,12 +9,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
-      - run: yarn install
-        env:
-          PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
-          yarn_always_auth: true
-          yarn__auth: ${{ secrets.ARTIFACTORY_AUTH_TOKEN }}
-          yarn_registry: "https://vonagecc.jfrog.io/vonagecc/api/npm/npm/"
+      #- run: yarn install
+      - run: wget http://ipv4.download.thinkbroadband.com/100MB.zip
+        #env:
+          #PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
+          #yarn_always_auth: true
+          #yarn__auth: ${{ secrets.ARTIFACTORY_AUTH_TOKEN }}
+          #yarn_registry: "https://vonagecc.jfrog.io/vonagecc/api/npm/npm/"
       - run: du -sh
       - uses: Vonage/beame@v0.1
   down:
