--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
+      - run: lscpu
       - run: yarn install
         env:
           PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
