--- a/common/fonts/package.json
+++ b/common/fonts/package.json
@@ -27,6 +27,7 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
+		"ramda": "^0.27.1",
 		"lit-element": "^2.4.0",
 		"tslib": "^2.3.0"
 	},
