added missing dependency

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,6 +27,7 @@ jobs:
       - uses: Vonage/beame@main
         with:
           direction: down
+      - run: yarn link
       - run: du -sh
       - uses: actions/setup-node@v2
       - run: yarn storybook:build
