--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,12 +65,17 @@ jobs:
         run: npm publish $(node ./scripts/vivid-all-package-generator)
 
   post_publish:
+    name: Post publish routine
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_VIVID_DEMO_PROD_ACCESS }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_VIVID_DEMO_PROD_SECRET }}
     needs: publish
     runs-on: ubuntu-18.04
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 10
       - uses: actions/setup-node@v2
       - uses: actions/download-artifact@v2
         with:
