--- a/components/banner/package.json
+++ b/components/banner/package.json
@@ -34,6 +34,8 @@
 		"tslib": "^2.3.0"
 	},
 	"devDependencies": {
+		"@vonage/vvd-typography": "2.14.0",
+		"@vonage/vvd-design-tokens": "2.14.0",
 		"@vonage/vvd-umbrella": "2.14.0",
 		"lit-html": "^1.3.0",
 		"typescript": "^4.3.2"
