--- a/components/media-controller/package.json
+++ b/components/media-controller/package.json
@@ -32,6 +32,7 @@
 		"ramda": "^0.27.1"
 	},
 	"devDependencies": {
+		"@vonage/vvd-foundation": "2.14.0",
 		"@vonage/vvd-design-tokens": "2.14.0",
 		"@vonage/vvd-umbrella": "2.14.0",
 		"typescript": "^4.3.2"
