--- a/.github/workflows/pull-request-master.yml
+++ b/.github/workflows/pull-request-master.yml
@@ -90,7 +90,7 @@ jobs:
 
   test_for_visual_regression:
     needs: build
-    name: Test Components' Graphics
+    name: Test Components Graphics
     runs-on: macos-latest
     steps:
       - uses: actions/setup-node@v2
