--- a/components/hero/package.json
+++ b/components/hero/package.json
@@ -25,10 +25,15 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@vonage/vvd-foundation": "^2.15.0",
-		"@vonage/vvd-umbrella": "^2.15.0",
+		"@vonage/vvd-core": "2.15.0",
 		"lit-element": "^2.4.0",
 		"lit-html": "^1.3.0",
 		"tslib": "^2.0.2"
+	},
+	"devDependencies": {
+		"@vonage/vvd-design-tokens": "2.15.0",
+		"@vonage/vvd-typography": "2.15.0",
+		"@vonage/vvd-umbrella": "2.15.0",
+		"typescript": "^4.3.2"
 	}
 }
