--- a/components/badge/package.json
+++ b/components/badge/package.json
@@ -31,6 +31,7 @@
 		"@vonage/vvd-core": "2.15.0",
 		"@vonage/vvd-foundation": "2.15.0",
 		"lit-element": "^2.4.0",
+		"lit-html": "^1.3.0",
 		"tslib": "^2.3.0"
 	},
 	"devDependencies": {
