--- a/components/badge/package.json
+++ b/components/badge/package.json
@@ -29,6 +29,7 @@
 	},
 	"dependencies": {
 		"@vonage/vvd-core": "2.15.0",
+		"@vonage/vwc-icon": "2.15.0",
 		"@vonage/vvd-foundation": "2.15.0",
 		"lit-element": "^2.4.0",
 		"lit-html": "^1.3.0",
