--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,8 +64,8 @@ jobs:
       - name: Publishing "@vonage/vivid" package
         run: npm publish $(node ./scripts/vivid-all-package-generator)
 
-  post_publish:
-    name: Post publish
+  deploy_storybook:
+    name: Deploy "vivid.vonage.com" (Storybook)
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_VIVID_DEMO_PROD_ACCESS }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_VIVID_DEMO_PROD_SECRET }}
@@ -83,10 +83,6 @@ jobs:
           path: /tmp
       - run: tar -zxf /tmp/vivid-env.tar.gz
 
-      # Notify community
-      - name: Notify slack
-        run: git log --format=oneline --decorate=short | node ./scripts/release_announcer --slackHookUrl="${{ secrets.SLACK_WEBHOOK }}"
-
       # Build and deploy showcase
       - name: Build storybook
         run: yarn storybook:build
@@ -102,3 +98,16 @@ jobs:
 
       - name: Invalidate CloudFront distribution root object's cache
         run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_VIVID_DEMO_PROD_DISTRIBUTION }} --paths "/"
+
+  announcements:
+    name: Announcements
+    needs: publish
+    runs-on: ubuntu-18.04
+    steps:
+      - name: Checkout Project
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - run: npm i lodash split kefir minimist semver-diff
+      - name: Send message to Slack's "Vivid Engineering" channel
+        run: git log --format=oneline --decorate=short | node ./scripts/release_announcer --slackHookUrl="${{ secrets.SLACK_WEBHOOK }}"
