--- a/components/side-drawer/package.json
+++ b/components/side-drawer/package.json
@@ -26,11 +26,10 @@
 	},
 	"dependencies": {
 		"@vonage/vvd-foundation": "^2.14.0",
-		"@vonage/vvd-umbrella": "^2.14.0",
 		"lit-element": "^2.4.0",
 		"tslib": "^2.0.2"
 	},
 	"devDependencies": {
-
+		"@vonage/vvd-umbrella": "^2.14.0"
 	}
 }
