--- a/components/text/package.json
+++ b/components/text/package.json
@@ -29,6 +29,7 @@
 	},
 	"dependencies": {
 		"@vonage/vvd-core": "2.16.1",
+		"@vonage/vvd-foundation": "2.16.1",
 		"lit-element": "^2.4.0",
 		"tslib": "^2.3.0"
 	},
