--- a/components/surface/package.json
+++ b/components/surface/package.json
@@ -28,7 +28,7 @@
 	"dependencies": {
 		"@material/mwc-menu": "^0.21.0",
 		"@vonage/vvd-core": "2.16.1",
-		"lit-element": "^2.4.0",
+		"lit-element": "~2.4.0",
 		"tslib": "^2.3.0"
 	},
 	"devDependencies": {
