--- a/.github/workflows/pull-request-master.yml
+++ b/.github/workflows/pull-request-master.yml
@@ -33,7 +33,7 @@ jobs:
         env:
           PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
           yarn_always_auth: true
-          YARN_NPM_AUTH_TOKEN: ${{ secrets.TAL_PAT_DO_NOT_USE }}
+          yarn__auth: ${{ secrets.TAL_PAT_DO_NOT_USE }}
           yarn_registry: "https://npm.pkg.github.com/Vonage"
       - run: yarn lerna run build --stream --concurrency=15 --include-dependencies
       - run: tar -zcf /tmp/vivid-env.tar.gz .
@@ -109,7 +109,7 @@ jobs:
       - run: npm rebuild playwright && yarn playwright install-deps
         env:
           yarn_always_auth: true
-          YARN_NPM_AUTH_TOKEN: ${{ secrets.TAL_PAT_DO_NOT_USE }}
+          yarn__auth: ${{ secrets.TAL_PAT_DO_NOT_USE }}
           yarn_registry: "https://npm.pkg.github.com/Vonage"
       - run: yarn ui-tests
       - uses: actions/upload-artifact@v2
