--- a/.github/workflows/pull-request-master.yml
+++ b/.github/workflows/pull-request-master.yml
@@ -32,8 +32,7 @@ jobs:
       - run: yarn install --frozen-lockfile
         env:
           PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
-          yarn_always_auth: true
-          yarn_registry: "https://npm.pkg.github.com/Vonage"
+          GITHUB_TOKEN: ${{ github.token }}
       - run: yarn lerna run build --stream --concurrency=15 --include-dependencies
       - run: tar -zcf /tmp/vivid-env.tar.gz .
       - uses: actions/upload-artifact@v2
@@ -107,8 +106,7 @@ jobs:
       - run: tar -zxf /tmp/vivid-env.tar.gz
       - run: npm rebuild playwright && yarn playwright install-deps
         env:
-          yarn_always_auth: true
-          yarn_registry: "https://npm.pkg.github.com/Vonage"
+          GITHUB_TOKEN: ${{ github.token }}
       - run: yarn ui-tests
       - uses: actions/upload-artifact@v2
         if: ${{ always() }}
