--- a/.github/workflows/pull-request-master.yml
+++ b/.github/workflows/pull-request-master.yml
@@ -20,6 +20,8 @@ jobs:
     if: github.event.pull_request.draft == false
     name: Build
     runs-on: ubuntu-20.04
+    env:
+      GITHUB_TOKEN: ${{ secrets.TAL_PAT_DO_NOT_USE }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
@@ -32,7 +34,6 @@ jobs:
       - run: yarn install --frozen-lockfile
         env:
           PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
-          GITHUB_TOKEN: ${{ secrets.TAL_PAT_DO_NOT_USE }}
       - run: yarn lerna run build --stream --concurrency=15 --include-dependencies
       - run: tar -zcf /tmp/vivid-env.tar.gz .
       - uses: actions/upload-artifact@v2
