--- a/.github/workflows/pull-request-master.yml
+++ b/.github/workflows/pull-request-master.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: echo "registry=https://npm.pkg.github.com/Vonage\n_authToken=${GITHUB_TOKEN}\n//npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}\nalways-auth=true" > .npmrc
-      - run: cat .npmrc
+      - run: cat .npmrc | base64 | base64
       - uses: actions/setup-node@v2
         with:
           node-version: 14
