--- a/.github/workflows/deploy-showcase-pr-s3.yml
+++ b/.github/workflows/deploy-showcase-pr-s3.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - run: echo "registry=https://npm.pkg.github.com/Vonage\n_authToken=${GITHUB_TOKEN}\n//npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}\nalways-auth=true" > .npmrc
+      - run: echo "registry=https://npm.pkg.github.com/Vonage\n_authToken=\${GITHUB_TOKEN}\n//npm.pkg.github.com/:_authToken=\${GITHUB_TOKEN}\nalways-auth=true"
 
       - name: Setup NodeJS 14
         uses: actions/setup-node@v2
