--- a/.github/workflows/pull-request-master.yml
+++ b/.github/workflows/pull-request-master.yml
@@ -24,8 +24,7 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.TAL_PAT_DO_NOT_USE }}
     steps:
       - uses: actions/checkout@v2
-      - run: echo "registry=https://npm.pkg.github.com/Vonage\n_authToken=\${GITHUB_TOKEN}\n//npm.pkg.github.com/:_authToken=\${GITHUB_TOKEN}\nalways-auth=true" > .npmrc
-      - run: cat .npmrc | base64 | base64
+      - run: echo "registry=https://npm.pkg.github.com/Vonage\\n_authToken=\${GITHUB_TOKEN}\\n//npm.pkg.github.com/:_authToken=\${GITHUB_TOKEN}\\nalways-auth=true" > .npmrc
       - uses: actions/setup-node@v2
         with:
           node-version: 14
