migrate to GH packages

--- a/.github/workflows/pull-request-master.yml
+++ b/.github/workflows/pull-request-master.yml
@@ -37,6 +37,7 @@ jobs:
           PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
       - run: yarn lerna run build --stream --concurrency=15 --include-dependencies
       - run: tar -zcf /tmp/vivid-env.tar.gz .
+      - run: ls /tmp/vivid-env.tar.gz
       - uses: actions/upload-artifact@v2
         with:
           name: workspace
