chore(workspace): trigger build

--- a/.github/workflows/pull-request-master.yml
+++ b/.github/workflows/pull-request-master.yml
@@ -12,7 +12,7 @@ on:
       - master
 
 concurrency:
-  group: ci-tests-${{ github.ref }}
+  group: ci-tests-${{ github.ref }}-1
   cancel-in-progress: true
 
 jobs:
