--- a/components/side-drawer/package.json
+++ b/components/side-drawer/package.json
@@ -27,13 +27,15 @@
 	"dependencies": {
 		"@vonage/vvd-core": "^2.14.0",
 		"@vonage/vvd-foundation": "^2.14.0",
+		"blocking-elements": "^0.1.1",
 		"lit-element": "^2.4.0",
 		"lit-html": "^1.1.2",
-		"tslib": "^2.3.0"
+		"tslib": "^2.3.0",
+		"wicg-inert": "^3.1.1"
 	},
 	"devDependencies": {
-		"@vonage/vvd-umbrella": "^2.14.0",
 		"@vonage/vvd-design-tokens": "^2.14.0",
-		"@vonage/vvd-typography": "^2.14.0"
+		"@vonage/vvd-typography": "^2.14.0",
+		"@vonage/vvd-umbrella": "^2.14.0"
 	}
 }
