--- a/components/snackbar/package.json
+++ b/components/snackbar/package.json
@@ -30,6 +30,7 @@
 		"@vonage/vvd-core": "2.16.1",
 		"@vonage/vvd-foundation": "2.16.1",
 		"@vonage/vwc-icon-button": "2.16.1",
+		"@vonage/vwc-note": "2.16.1",
 		"lit-element": "^2.4.0",
 		"lit-html": "^1.3.0",
 		"tslib": "^2.3.0"
