--- a/components/card/package.json
+++ b/components/card/package.json
@@ -29,6 +29,7 @@
 		"@vonage/vwc-button": "^2.14.0",
 		"@vonage/vwc-icon": "^2.14.0",
 		"lit-element": "^2.4.0",
+		"lit-html": "^1.1.1",
 		"tslib": "^2.0.2"
 	},
 	"devDependencies": {
