Update stories and add subtitle

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"storybook:vivid:pre": "yarn compile && yarn wca:json && node ./.storybook/build-scripts/build-pre.mjs",
 		"storybook:vivid:post": "node ./.storybook/build-scripts/build-post.mjs",
 		"storybook:build": "yarn storybook:vivid:pre && build-storybook -c .storybook -o .out -s ./.storybook/static && yarn storybook:vivid:post",
+		"storybook": "start-storybook -s ./.storybook/static -p 9000",
 		"start": "yarn storybook:vivid:pre && start-storybook -s ./.storybook/static -p 9000",
 		"build:design-tokens": "lerna run build --scope @vonage/vvd-design-tokens",
 		"compile": "lerna run build --stream",
