--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"test:chrome": "karma start --coverage --browsers=ChromeHeadless",
 		"test:firefox": "karma start --coverage --browsers=FirefoxHeadless",
 		"test:safari": "karma start --coverage --browsers=SafariNative",
+		"test:safari-local": "karma start --coverage --browsers=SafariNative --autoWatch=true --singleRun=false",
 		"test:dev": "yarn compile && concurrently -r \"yarn watch\" \"karma start karma.conf.spec.js\"",
 		"test:dev:ci": "yarn compile && concurrently -r \"yarn watch\" \"RUN=CI karma start karma.conf.spec.js\"",
 		"test:update-snapshots": "karma start --update-snapshots",
