--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 		"test:chrome": "karma start --coverage --browsers=ChromeHeadless",
 		"test:firefox": "karma start --coverage --browsers=FirefoxHeadless",
 		"test:safari": "karma start --coverage --browsers=SafariNative",
-		"test:dev": "yarn compile && concurrently -r \"yarn watch\" \"karma start karma.conf.spec.js\"",
+		"test:dev": "yarn compile && concurrently -r \"yarn watch\" \"yarn test:dev-no-build\"",
+		"test:dev-no-build": "karma start karma.conf.spec.js",
 		"test:dev:ci": "yarn compile && concurrently -r \"yarn watch\" \"RUN=CI karma start karma.conf.spec.js\"",
 		"test:update-snapshots": "karma start --update-snapshots",
 		"test:prune-snapshots": "karma start --prune-snapshots",
