--- a/components/chip/package.json
+++ b/components/chip/package.json
@@ -28,6 +28,7 @@
 		"@vonage/vvd-foundation": "^2.15.0",
 		"@vonage/vvd-typography": "^2.15.0",
 		"lit-element": "^2.4.0",
+		"lit-html": "^1.1.1",
 		"tslib": "^2.0.2"
 	},
 	"devDependencies": {
