--- a/components/card/package.json
+++ b/components/card/package.json
@@ -25,16 +25,16 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@vonage/vwc-badge": "^2.14.0",
-		"@vonage/vwc-button": "^2.14.0",
-		"@vonage/vwc-icon": "^2.14.0",
+		"@vonage/vwc-badge": "2.17.0",
+		"@vonage/vwc-button": "2.17.0",
+		"@vonage/vwc-icon": "2.17.0",
 		"lit-element": "^2.4.0",
-		"lit-html": "^1.1.1",
+		"lit-html": "^1.3.0",
 		"tslib": "^2.3.0"
 	},
 	"devDependencies": {
-		"@vonage/vvd-foundation": "^2.14.0",
-		"@vonage/vvd-typography": "^2.14.0",
-		"@vonage/vvd-umbrella": "^2.14.0"
+		"@vonage/vvd-foundation": "2.17.0",
+		"@vonage/vvd-typography": "2.17.0",
+		"@vonage/vvd-umbrella": "2.17.0"
 	}
 }
