--- a/components/chip/package.json
+++ b/components/chip/package.json
@@ -1,11 +1,11 @@
 {
-	"name": "@vonage/vwc-side-drawer",
+	"name": "@vonage/vwc-chip",
 	"version": "2.17.0",
-	"description": "side-drawer component",
-	"homepage": "https://github.com/Vonage/vivid/tree/master/components/side-drawer#readme",
+	"description": "chip component",
+	"homepage": "https://github.com/Vonage/vivid/tree/master/components/chip#readme",
 	"license": "ISC",
-	"main": "vwc-side-drawer.js",
-	"module": "vwc-side-drawer.js",
+	"main": "vwc-chip.js",
+	"module": "vwc-chip.js",
 	"files": [
 		"*.js",
 		"*.ts",
@@ -14,7 +14,7 @@
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/vonage/vivid.git",
-		"directory": "components/side-drawer"
+		"directory": "components/chip"
 	},
 	"scripts": {
 		"build:typescript": "tsc -b",
@@ -25,15 +25,14 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@vonage/vvd-core": "2.17.0",
 		"@vonage/vvd-foundation": "2.17.0",
+		"@vonage/vvd-typography": "2.17.0",
+		"@vonage/vwc-icon": "2.17.0",
 		"lit-element": "^2.4.0",
 		"lit-html": "^1.3.0",
 		"tslib": "^2.3.0"
 	},
 	"devDependencies": {
-		"@vonage/vvd-design-tokens": "2.17.0",
-		"@vonage/vvd-typography": "2.17.0",
 		"@vonage/vvd-umbrella": "2.17.0"
 	}
 }
