--- a/components/chip/package.json
+++ b/components/chip/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@vonage/vwc-chip",
-	"version": "2.15.0",
+	"version": "2.17.0",
 	"description": "chip component",
 	"homepage": "https://github.com/Vonage/vivid/tree/master/components/chip#readme",
 	"license": "ISC",
@@ -25,14 +25,14 @@
 		"url": "https://github.com/Vonage/vivid/issues"
 	},
 	"dependencies": {
-		"@vonage/vvd-foundation": "^2.15.0",
-		"@vonage/vvd-typography": "^2.15.0",
-		"@vonage/vvd-icon": "^2.15.0",
+		"@vonage/vvd-foundation": "2.17.0",
+		"@vonage/vvd-typography": "2.17.0",
+		"@vonage/vwc-icon": "2.17.0",
 		"lit-element": "^2.4.0",
 		"lit-html": "^1.1.1",
 		"tslib": "^2.0.2"
 	},
 	"devDependencies": {
-		"@vonage/vvd-umbrella": "^2.15.0"
+		"@vonage/vvd-umbrella": "2.17.0"
 	}
 }
