add the patch to other

--- a/.github/workflows/deploy-showcase-dev-s3.yml
+++ b/.github/workflows/deploy-showcase-dev-s3.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Install dependencies
         if: steps.yarn-cache.outputs.cache-hit != 'true'
-        run: yarn install
+        run: yarn install --network-timeout 100000
 
       - name: Build storybook
         run: yarn storybook:build
