testing git commits from workflow

--- a/.github/workflows/temp.yml
+++ b/.github/workflows/temp.yml
@@ -17,6 +17,6 @@ jobs:
 
       - run: git checkout -b this_is_a_test_branch_please_delete_me
 
-      - run: git commit -ma "Testing push to master without the use of PATs"
+      - run: git commit -a -m "Testing push to master without the use of PATs"
 
       - run: git push
